objects/GW_Volunteers__Volunteer_Hours__c.object
<CustomObject>
    <fields>
        <fullName>GW_Volunteers__Comments__c</fullName>
        <label>Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GW_Volunteers__Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Volunteer Hours</relationshipLabel>
        <relationshipName>Volunteer_Hours</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>GW_Volunteers__End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GW_Volunteers__Full_Name__c</fullName>
        <formula>GW_Volunteers__Contact__r.LastName  &amp; &quot;, &quot; &amp;  GW_Volunteers__Contact__r.FirstName</formula>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GW_Volunteers__Hours_Worked__c</fullName>
        <label>Hours Worked</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GW_Volunteers__Number_of_Volunteers__c</fullName>
        <defaultValue>1</defaultValue>
        <inlineHelpText>Defaults to 1. Increase if this person is bringing additional people whom you are not directly tracking as contacts, and won&apos;t be logging individual volunteer hours against.</inlineHelpText>
        <label>Number of Volunteers</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GW_Volunteers__Planned_Start_Date_Time__c</fullName>
        <inlineHelpText>The actual date &amp; time the volunteer is planning on starting.</inlineHelpText>
        <label>Planned Start Date &amp; Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GW_Volunteers__Shift_Start_Date_Time__c</fullName>
        <formula>GW_Volunteers__Volunteer_Shift__r.GW_Volunteers__Start_Date_Time__c</formula>
        <label>Shift Start Date &amp; Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GW_Volunteers__Start_Date__c</fullName>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GW_Volunteers__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Prospect</fullName>
                </value>
                <value>
                    <fullName>Confirmed</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>No-Show</fullName>
                </value>
                <value>
                    <fullName>Web Sign Up</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GW_Volunteers__System_Note__c</fullName>
        <inlineHelpText>Text information from the system scheduler.</inlineHelpText>
        <label>System Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GW_Volunteers__Total_Hours_Worked__c</fullName>
        <formula>IF( ISPICKVAL(GW_Volunteers__Status__c, &quot;Completed&quot;), GW_Volunteers__Hours_Worked__c *  GW_Volunteers__Number_of_Volunteers__c, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Hours Worked</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GW_Volunteers__Volunteer_Campaign_Name__c</fullName>
        <formula>GW_Volunteers__Volunteer_Job__r.GW_Volunteers__Campaign__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Volunteer Campaign Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GW_Volunteers__Volunteer_Campaign__c</fullName>
        <formula>GW_Volunteers__Volunteer_Job__r.GW_Volunteers__Campaign__c</formula>
        <label>Volunteer Campaign</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GW_Volunteers__Volunteer_Job__c</fullName>
        <label>Volunteer Job</label>
        <referenceTo>GW_Volunteers__Volunteer_Job__c</referenceTo>
        <relationshipLabel>Volunteer Hours</relationshipLabel>
        <relationshipName>Volunteer_Hours</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>GW_Volunteers__Volunteer_Recurrence_Schedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Volunteer Recurrence Schedule</label>
        <referenceTo>GW_Volunteers__Volunteer_Recurrence_Schedule__c</referenceTo>
        <relationshipLabel>Volunteer Hours</relationshipLabel>
        <relationshipName>Volunteer_Hours</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GW_Volunteers__Volunteer_Shift__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Volunteer Shift</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>GW_Volunteers__Volunteer_Shift__c.GW_Volunteers__Volunteer_Job__c</field>
                <operation>equals</operation>
                <valueField>$Source.GW_Volunteers__Volunteer_Job__c</valueField>
            </filterItems>
            <infoMessage>You can only pick a Shift which belongs to the current Job.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>GW_Volunteers__Volunteer_Shift__c</referenceTo>
        <relationshipLabel>Volunteer Hours</relationshipLabel>
        <relationshipName>Volunteer_Hours</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Volunteer Hours</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>HoursID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Volunteer Hours</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>GW_Volunteers__HoursRequiredOnCompletion</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(GW_Volunteers__Status__c, &apos;Completed&apos;) , ISNULL( GW_Volunteers__Hours_Worked__c ))</errorConditionFormula>
        <errorDisplayField>GW_Volunteers__Hours_Worked__c</errorDisplayField>
        <errorMessage>Please specify the Hours Worked when setting Status to Completed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GW_Volunteers__StatusMustBeSet</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(GW_Volunteers__Status__c,&quot;&quot; )</errorConditionFormula>
        <errorDisplayField>GW_Volunteers__Status__c</errorDisplayField>
        <errorMessage>Please specify a Status value.</errorMessage>
    </validationRules>
</CustomObject>